--- a/src/index.scss
+++ b/src/index.scss
@@ -29,4 +29,8 @@ a {
 button {
   font-family: $font-stack;
   padding: 0;
+}s
+
+span {
+  white-space: nowrap;
 }
