--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -17,8 +17,10 @@ a {
   font-size: 1rem;
 }
 
-p, span {
+p, span, pre {
   font-size: 1rem;
+  margin: 0;
+  padding: 0;
 }
 
 button {
